<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="@color/Grey50">
        <TextView
            android:id="@+id/agregar_avances_tvConstruccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/actividad" />
        <AutoCompleteTextView
            android:id="@+id/agregar_avances_aCConstruccion"
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp" />
        <TextView
            android:id="@+id/agregar_avances_tvActividad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/subactividad" />
        <AutoCompleteTextView
            android:id="@+id/agregar_avances_aCActividad"
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">
            <TextView
                android:id="@+id/agregar_avances_tvCantPendiente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/cantidad_pendiente" />
            <TextView
                android:id="@+id/agregar_avances_tvCantPendienteValor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="0000"
                android:gravity="right"/>
            <TextView
                android:id="@+id/agregar_avances_tvUnidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="unidad"
                android:gravity="center"/>
        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="@color/Grey50">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4">

            <TextView
                android:id="@+id/agregar_avances_tvAvance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceListItem"
                android:text="Avance:"
                android:layout_weight="2"
                android:gravity="center_vertical"/>
            <EditText
                android:id="@+id/agregar_avances_etAvance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:inputType="numberDecimal"
                android:text=""
                android:textSize="26sp"
                android:gravity="right" />
            <TextView
                android:id="@+id/agregar_avances_tvUnidadIngreso"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="unidad"
                android:gravity="center_vertical"/>

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6">
            <EditText
                android:id="@+id/main_menu_etComentario"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="14sp"
                android:hint="@string/escriba_comentario"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <LinearLayout
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <ImageButton
                    android:id="@+id/agregar_avances_ibFotografia"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_photo_camera_black_48dp" />

            </LinearLayout>

            <LinearLayout
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/agregar_avances_ibInfoAdicional"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_chrome_reader_mode_black_48dp"
                    android:gravity="center_horizontal"/>


            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="10dp">
            <Button
                android:id="@+id/agregar_avances_btnAceptar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Guardar"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>



    </LinearLayout>



</LinearLayout>